--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -90,6 +90,7 @@ jobs:
           pip3 install --upgrade nbconvert
           export JEKYLL_ENV=production
           bundle exec jekyll clean
+          mkdir -p _site/en _site/zh_CN
           bundle exec jekyll build
       - name: Purge unused CSS 🧹
         run: |
